[package]
name = "chatroom-rust-ndjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
futures = "0.3.29"
futures-util = "0.3.29"
http-body = "1.0.0"
hyper = { version = "1.0.1", features = ["full"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sync_wrapper = "0.1.2"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
